--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -50,6 +50,18 @@ http {
     ssl_protocols {{ nginx_ssl_protocols -}};
     ssl_ciphers {{ nginx_ssl_ciphers -}};
     ssl_prefer_server_ciphers {{ nginx_ssl_prefer_server_ciphers -}};
+    ssl_dhparam {{ nginx_ssl_dhparam -}};
+    ssl_ecdh_curve {{ nginx_ssl_ecdh_curve -}};
+    ssl_session_timeout {{ nginx_ssl_session_timeout -}};
+    ssl_session_cache {{ nginx_ssl_session_cache -}};
+    ssl_session_tickets {{ nginx_ssl_session_tickets -}};
+    ssl_stapling {{ nginx_ssl_stapling -}};
+    ssl_stapling_verify {{ nginx_ssl_stapling_verify -}};
+
+    {% if nginx_resolvers %}
+    resolver {{ nginx_resolvers | join (' ') }} valid=300s;
+    resolver_timeout 5s;
+    {% endif %}
 
     log_format ext_combined {{ nginx_log_format }};
 
@@ -57,83 +69,20 @@ http {
     error_log {{ nginx_error_log -}};
 
     gzip {{ nginx_gzip -}};
+    gzip_vary {{ nginx_gzip_vary -}};
     gzip_disable {{ nginx_gzip_disable -}};
     gzip_types {{ nginx_gzip_types -}};
+    gzip_proxied {{ nginx_gzip_proxied -}};
     {% if nginx_global is defined %}
     {% for global_var in nginx_global %}
         {{ global_var.content }}
     {% endfor %}
     {% endif %}
-    {%- for served_domain in served_domains if not served_domain.nginx_skip_server | default(false) %}
-
-    server {
-        {% for header in served_domain.headers | default([]) -%}
-        add_header {{ header }};
-        {% endfor %}
-
-        {% if served_domain.return is defined -%}
-        return {{ served_domain.return }};
-        {%- endif %}
-        {%- if served_domain.index_files is defined -%}
-        index{% for index_var in served_domain.index_files %} {{ index_var }}{% endfor %};
-        {% endif %}
-        {%- if served_domain.root is defined -%}
-        root {{ served_domain.root }};
-        {% endif %}
-        {%- if served_domain.https -%}
-        listen 443 ssl{% if served_domain.enable_http2 is defined and served_domain.enable_http2 %} http2 {% endif %}{% if served_domain.default_server %} default_server {% endif %};
-        ssl_certificate     {{ served_domain.fullchain_path | default(nginx_default_fullchain_path) }};
-        ssl_certificate_key {{ served_domain.privkey_path | default(nginx_default_privkey_path) }};
-        {% else -%}
-        listen 80 {% if served_domain.default_server %} default_server{% endif %};
-        {% endif -%}
-        server_name
-        {%- if served_domain.domains is defined and served_domain.domains|length > 0  -%}
-            {%- for domain in served_domain.domains -%}
-                {{- build_domain_list( domain, ' ' ) -}}
-            {%- endfor -%};
-        {% else %}
-            _;
-        {%- endif %}
-        {%- if served_domain.client_max_body_size is defined -%}
-            client_max_body_size {{ served_domain.client_max_body_size }};
-        {%- endif %}
-        {%- if served_domain.fastcgi_buffers is defined -%}
-            fastcgi_buffers {{ served_domain.fastcgi_buffers }}
-        {%- endif %}
-        {%- for configuration in served_domain.configurations | default([]) %}
-            {{- configuration.content | indent( width=12) }}
-        {%- endfor %}
-        {%- for location_var in served_domain.locations | default([]) %}
-
-        location {{ location_var.condition }} {
-            {% if location_var.ignore_access is defined -%}
-                {%- for ip_range in served_domain.allowed_ip_ranges -%}
-                allow {{ ip_range }};
-                {%- endfor %}
-                deny all;
-            {%- endif %}
-            {{- location_var.content | indent( width=12) }}
-        }
-    {% endfor -%}
-    }
-
-    {% endfor %}
-
-    {%- for upstream in nginx_upstreams | default([]) -%}
-    upstream {{ upstream.name }} {
-        {% if upstream.path is defined %}
-        server {{ upstream.path }};
-        {% else %}
-        {{- upstream.content | indent( width=8 )}}
-        {% endif %}
-
-    }
-    {% endfor %}
-    {% for map in nginx_maps | default([]) %}
-    map {{ map.condition }} {
-        {{ map.content }};
-    }
-    {% endfor %}
+    include /etc/nginx/sites/*.conf;
+   {% for map in nginx_maps | default([]) %}
+   map {{ map.condition }} {
+       {{ map.content }};
+   }
+   {% endfor %}
 
 }
