--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -16,7 +16,7 @@
         {#- output domain name with appended prefix and suffix, with given separator and without leading dot -#}
         {{- separator }}{{ domain[:-1] -}}
     {%- else -%}
-        {% for prefix in domain_prefixes -%}{#- append all domain prefixes -#}
+        {% for prefix in nginx_domain_prefixes -%}{#- append all domain prefixes -#}
             {%- for suffix in domain_suffixes -%}{#- append all domain suffixes -#}
                 {#- output domain name with appended prefix and suffix, with given separator -#}
                 {{- separator }}{{ fix_domain( [prefix,domain,suffix] | join('.') ) -}}
